<resources>
    <string name="app_name">SurveyDonkey</string>
    <string name="start">start</string>
    <string name="q1_favorite_color">¿Cuál es tu color favorito?</string>
    <string name="rojo">Rojo</string>
    <string name="azul">Azul</string>
    <string name="blanco">Blanco</string>
    <string name="q2_favorite_material">¿Cuál es tu material favorito?</string>
    <string name="end_results">Resultados:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ambar">Ambar</string>
    <string name="verde_oliva">Verde oliva</string>
    <string name="azul_cobalto">Azul cobalto</string>
    <string name="negro">Negro</string>
    <string name="q3_favorite_material_band">Qué color preferirías en la correa de reloj?</string>
    <string name="q4_sugerencias">Sugerencias para la Tienda</string>
    <string name="sugerencias">Sugerencias</string>
    <string name="email">Email</string>
    <string name="cuero">Cuero</string>
    <string name="aluminio">Aluminio</string>
    <string name="acero_inox">Acero Inox.</string>
    <string name="q1_color_favorito" />
</resources>
