<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_tercera_pregunta"
        style="@style/question_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q3_favorite_material_band"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/opcion_3_1"
        style="@style/question_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/negro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tercera_pregunta" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/opcion_3_2"
        style="@style/question_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/azul_cobalto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opcion_3_1" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/opcion_3_3"
        style="@style/question_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verde_oliva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opcion_3_2"
        />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/opcion_3_4"
        style="@style/question_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ambar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opcion_3_3" />


</androidx.constraintlayout.widget.ConstraintLayout>