<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_first_question"
        style="@style/question_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q1_favorite_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/opcion_1_1"
        style="@style/question_check_box"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rojo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_question" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/opcion_1_2"
        style="@style/question_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/azul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opcion_1_1" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/opcion_1_3"
        style="@style/question_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opcion_1_2" />

 </androidx.constraintlayout.widget.ConstraintLayout>