<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.marely.surveydonkey.ui.fragment.FourthQuestionFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_fourth_question"
        style="@style/question_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q4_sugerencias"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/answer_4_1"
        style="@style/question_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#6ABCC8"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_fourth_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/answer_4_2"
        style="@style/question_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#6ABCC8"
        android:lines="6"
        android:hint="@string/sugerencias"
        android:padding="12dp"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@+id/answer_4_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>